<resources>
    <string name="app_name">Котопоиск</string>
    <string name="item_string_search">Поиск</string>
    <string name="item_string_map">Карта</string>
    <string name="item_string_profile">Профиль</string>
    <string name="toolbar_string_map">Карта</string>
    <string name="toolbar_string_search">Поиск</string>
    <string name="toolbar_string_profile">Профиль</string>
    <string name="enter_your_nickname">Введите никнейм</string>
    <string name="enter_full_name">Введите полное имя</string>
    <string name="enter_email">Ввеедите email</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="register">Регистрация</string>
    <string name="please_fill_field">Пожалуйста, заполните поле</string>

    <string name="default_error_message">Уупс, что-то пошло не так</string>
    <string name="auth_error_message">Проблема авторизации. Пожалуйста, авторизуйтесь</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="update_profile_error">Профиль не обновлён</string>
    <string name="ticket_not_found">Объявление не найдено</string>
    <string name="tickets_error">Проблема отображения объявления</string>
    <string name="update_ticket_error">Объявление не обновлено</string>
    <string name="upload_ticket_error">Объявление не опубликовано</string>
    <string name="delete_ticket_error">Объявление не удалено</string>
    <string name="timout_error">Превышено время ожидания ответа от сервера</string>
    <string name="object_not_found">Извените, объект не найден</string>
    <string name="no_connection_error">Возникли неполадки с интернетом. Пожалуйста, проверьте интернет соединение и попробуйте ещё раз</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="app_will_be_closed">Приложение будет закрыто</string>
    <string name="try_again">Попробуйте снова</string>
    <string name="cat">Котик</string>
    <string name="dog">Собачка</string>
    <string name="unknown">Неизвестно</string>
    <string name="white">Белый</string>
    <string name="black">Чёрный</string>
    <string name="red">Красный</string>
    <string name="short_word">Короткий</string>
    <string name="medium">Средний</string>
    <string name="big">Большой</string>
    <string name="long_word">Длинный</string>
    <string name="pet_is_found">Питомец найден</string>
    <string name="pet_not_found">Питомец не найден</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="info_window_default_number">8–909–123–45–67</string>
    <string name="info_window_default_date">29.07.2018</string>
    <string name="save">Сохранить</string>
    <string name="info">Информация</string>
    <string name="edit_profile">Изменить профиль</string>
    <string name="tickets">Объявления</string>
    <string name="my_tickets">Мои объявления</string>
    <string name="his_tickets">Созданные объявления</string>
    <string name="favorite_tickets">Любимые объявления</string>
    <string name="log_out">Выйти</string>
    <string name="not_published">Не опубликовано</string>
    <string name="no_tickets">Нет объявлений</string>
    <string name="pets_discovered">%d питомцев обнаружено</string>
    <string name="found_masters">%d питомцев нашли свой дом</string>

    <string name="dialog_title">Создать новое объявление</string>
    <string name="photo">Photo</string>
    <string name="publish">ОПУБЛИКОВАТЬ</string>
    <string name="save_bold">СОХРАНИТЬ</string>
    <string name="confirm">ПОДТВЕРДИТЬ</string>
    <string name="cancel_bold">ОТМЕНА</string>
    <string name="change">ИЗМЕНИТЬ</string>
    <string name="search">ПОИСК</string>
    <string name="go">ПЕРЕЙТИ</string>
    <string name="dialog1">Загрузить фото из галереи</string>
    <string name="dialog2">Сделать снимок</string>
    <string name="explanation_dialog_message">Это разрешение необходимо для того, чтобы сохранить сделанные вами
    фото пропавших животных на SD-карту</string>
    <string name="really_explanation_dialog_message">Это разрешение ДЕЙСТВИТЕЛЬНО НЕОБХОДИМО для того,
        чтобы сохранить сделанные вами фото пропавших животных на SD-карту</string>
    <string name="explanation_dialog_title">Доступ к данным</string>
    <string name="dialog_positive_button">Запросить</string>

    <string name="cat_radio">Кошка</string>
    <string name="dog_radio">Собака</string>
    <string name="animal_type">Тип животного</string>
    <string name="breed">Порода</string>

    <string name="location">Место обнаружения</string>
    <string name="location_scream"><u>Задать место</u></string>
    <string name="location_map"><u>Выбрано место на карте</u></string>
    <string name="error_location">Не выбрано место на карте!</string>

    <string name="color">Окрас</string>
    <string name="size">Размер</string>
    <string name="fur_length">Длина шерсти</string>
    <string name="owner">Автор</string>
    <string name="has_collar">Наличие ошейника</string>
    <string name="description">Описание</string>

    <string name="new_ticket">Новое объявление</string>
    <string name="map_fragment_hint_float_action_bar">Нажмите сюда, чтобы добавить своё объявление</string>
    <string name="enter">Войти с Google Account</string>
    <string name="delete_ticket">Удаление объявления</string>
    <string name="sure_delete_ticket">Вы действительно хотите удалить объявление?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="search_results">Результаты поиска</string>
    <string name="ticket_overview">Просмотр объявления</string>

    <string-array name="cat_breed_array">
        <item>Не определена</item>
        <item>Британская</item>
        <item>Персидская</item>
        <item>Сиамская</item>
        <item>Мейн-кун</item>
        <item>Бобтейл</item>
        <item>Манчкин</item>
        <item>Русская голубая</item>
        <item>Гималайская</item>
        <item>Ангорская</item>
        <item>Ориентальная</item>
        <item>Сфинкс</item>
    </string-array>

    <string-array name="dog_breed_array">
        <item>Не определена</item>
        <item>Немецкая овчарка</item>
        <item>Лабрадор-ретривер</item>
        <item>Золотистый ретривер</item>
        <item>Бульдог</item>
        <item>Пудель</item>
        <item>Бигль</item>
        <item>Чихуахуа</item>
        <item>Мопс</item>
        <item>Йоркширский терьер</item>
        <item>Ротвейлер</item>
        <item>Сибирский хаски</item>
        <item>Мастиф</item>
        <item>Дог</item>
        <item>Такса</item>
        <item>Доберман</item>
        <item>Болонка</item>
        <item>Чау-чау</item>
        <item>Вельш-корги</item>
        <item>Далматин</item>
        <item>Сенбернар</item>
        <item>Сиба-ину</item>
        <item>Басет-хаунд</item>
        <item>Колли</item>
        <item>Шпиц</item>
    </string-array>

    <string-array name="color_array">
        <item>Чёрный</item>
        <item>Коричневый</item>
        <item>Палевый(Осветлённый коричневый)</item>
        <item>Рыжий</item>
        <item>Песочный</item>
        <item>Серый</item>
        <item>Белый</item>
        <item>Подпалый(Рыжие пятна на тёмном фоне)</item>
        <item>Шоколадный</item>
        <item>Красный(тёмно-рыжий)</item>
        <item>Кремовый</item>
    </string-array>

    <string-array name="cat_size">
        <item>Котёнок</item>
        <item>Взрослый</item>
    </string-array>

    <string-array name="dog_size">
        <item>Щенок</item>
        <item>Взрослый</item>
    </string-array>

    <string-array name="fur_length_array">
        <item>Нет</item>
        <item>Короткая</item>
        <item>Средняя</item>
        <item>Длинная</item>
    </string-array>

</resources>
