<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/new_ticket_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/photo"
            android:scaleType="centerCrop"

            app:layout_constraintDimensionRatio="0.6:0.3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/animal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/animal_type"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_ticket_photo" />

        <RadioGroup
            android:id="@+id/radio_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animal_type">

            <RadioButton
                android:id="@+id/cat_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_radio" />

            <RadioButton
                android:id="@+id/dog_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dog_radio" />

        </RadioGroup>

        <TextView
            android:id="@+id/title_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/location"

            app:layout_constraintStart_toEndOf="@id/animal_type"
            app:layout_constraintTop_toBottomOf="@id/new_ticket_photo" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/location_scream"
            android:textColor="@color/black"

            app:layout_constraintStart_toEndOf="@id/radio_type"
            app:layout_constraintTop_toBottomOf="@id/title_location" />

        <TextView
            android:id="@+id/breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/breed"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_type" />

        <Spinner
            android:id="@+id/spinner_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/bottomNavigationBarColor"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/breed" />

        <TextView
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/color"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_breed" />

        <Spinner
            android:id="@+id/spinner_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:entries="@array/color_array"
            android:textColor="@color/bottomNavigationBarColor"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color" />

        <TextView
            android:id="@+id/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/size"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_color" />

        <Spinner
            android:id="@+id/spinner_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size" />

        <TextView
            android:id="@+id/furLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/fur_length"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_size" />

        <Spinner
            android:id="@+id/spinner_furLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:entries="@array/fur_length_array"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/furLength" />

        <TextView
            android:id="@+id/collar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/has_collar"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_furLength" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/collar_switch_compat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="24dp"
            android:layout_marginTop="4dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_furLength" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="5"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/collar_switch_compat" />

        <Button
            android:id="@+id/new_ticket_save_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/button_color"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/save_bold"
            android:textColor="@color/crystalWhite"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <Button
            android:id="@+id/new_ticket_publish_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/publish"
            android:textColor="@color/crystalWhite"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_ticket_save_button" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>